# RL-experiments

./: .gitignore  LICENSE  README.md  play_model.py  pyproject.toml  requirements.txt  run_all.py  setup.sh  task.md  train_ui.py  view_agent.py
advanced/dreamer/: dreamer_agent.py  replay_buffer.py  world_model.py
advanced/muzero/: mcts.py  muzero_agent.py  replay_buffer.py
analysis/: __init__.py  plot_results.py
baselines/: __init__.py  dqn_experiment.py  ppo_experiment.py  sac_experiment.py
docs/: advanced.md  algorithm_fidelity.md  baselines.md  index.md  setup.md  usage.md
docs/algorithms/: 00_notation_and_conventions.md  double_dqn.md  dqn.md  dreamer.md  i2a.md  index.md  mbpo.md  muzero.md  mve.md  per_dqn.md  pets.md  planet.md  ppo.md  rainbow.md  sac.md  steve.md  tdmpc.md  tdmpc2.md  world_models.md  (+1 more)
experiments/: __init__.py  compare_phase1.py  run_advanced.py
logs/: dqn_cartpole_v1_seed0.csv  dqn_cartpole_v1_seed1.csv  dqn_cartpole_v1_seed2.csv  dqn_lunarlander_v3_seed0.csv  dqn_lunarlander_v3_seed1.csv  dqn_lunarlander_v3_seed2.csv  ppo_cartpole_v1_seed0.csv  ppo_cartpole_v1_seed0_20260421_152229.csv  ppo_cartpole_v1_seed0_20260421_152231.csv  ppo_cartpole_v1_seed0_20260421_152322.csv  ppo_cartpole_v1_seed1.csv  ppo_cartpole_v1_seed2.csv  ppo_lunarlander_v3_seed0.csv  ppo_lunarlander_v3_seed1.csv  ppo_lunarlander_v3_seed2.csv  sac_lunarlandercontinuous_v3_seed0.csv  sac_lunarlandercontinuous_v3_seed1.csv  sac_lunarlandercontinuous_v3_seed2.csv  sac_pendulum_v1_seed0.csv  sac_pendulum_v1_seed1.csv  sac_pendulum_v1_seed2.csv
tests/: test_smoke.py
(+103 files in other folders)
